<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/vector_1"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_group"
        android:icon="@drawable/group_2_1"
        android:title="@string/title_group" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/file_1"
        android:title="@string/title_info" />

    <item
        android:id="@+id/navigation_counter"
        android:icon="@drawable/group_12"
        android:title="@string/title_counter" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/user_2_1"
        android:title="@string/title_user" />

</menu>